# synapse-auto-send-events

./: pyproject.toml  setup.cfg
scripts-dev/: lint.sh
synapse_auto_send_events/: __init__.py
